# FeatherSQL

./: README.md  index.html  package-lock.json  package.json  vitest.config.ts
src/: App.tsx  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  ICON_README.md  create-icon.ps1  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: .gitkeep
src-tauri/src/: error.rs  main.rs
src-tauri/src/db/: connections.rs  execute.rs  history.rs  mod.rs  pool_manager.rs  settings.rs
src-tauri/src/storage/: mod.rs
src/__mocks__/: tauri.ts
src/api/: tauri.ts
src/components/: ConfirmDialog.tsx  ConnectionForm.tsx  ConnectionManager.tsx  ImportDialog.tsx  ResultTable.tsx  SqlEditor.tsx  SqlHistory.tsx  TabBar.tsx  TableStructure.tsx  TableView.tsx
src/components/ConnectionManager/: TableContextMenu.tsx
src/components/ResultTable/: ContextMenu.tsx  EditToolbar.tsx  EmptyState.tsx  Pagination.tsx  SqlDisplayBar.tsx  TableBody.tsx  TableHeader.tsx  TableRow.tsx  ViewStructureButton.tsx
src/hooks/: useCellSelection.ts  useColumnFilters.ts  useEditHistory.ts  useEscapeKey.ts  useTableEditing.ts
src/hooks/__tests__/: useCellSelection.test.ts  useColumnFilters.test.ts  useEditHistory.test.ts  useEscapeKey.test.ts  useTableEditing.test.ts
src/lib/: commands.ts  utils.ts
src/lib/__tests__/: commands.test.ts  utils.test.ts
src/store/: connectionStore.ts
src/store/__tests__/: connectionStore.test.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: exportUtils.ts  importUtils.ts  sqlGenerator.ts
src/utils/__tests__/: exportUtils.test.ts  importUtils.test.ts  sqlGenerator.test.ts
